src/components/Board/Cards/style.css
.bdcards-cont {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

/* #region scrollbar */
.bdcards-scrollbar {
  width: calc(100% + 12px);
  flex: 1;
  max-height: 100%;
  padding-right: 12px;
  scrollbar-width: thin;
  scrollbar-track-color: transparent;
  scrollbar-color: var(--scrollbar-track-bg) transparent;
  overflow-y: scroll;
  overflow-x: hidden;
}

.bdcards-scrollbar::-webkit-scrollbar {
  width: 4px;
}

.bdcards-scrollbar::-webkit-scrollbar-track {
  background-color: transparent;
}

.bdcards-scrollbar::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: var(--scrollbar-track-bg);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
/* #endregion scrollbar */

